kustomize/home-assistant-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homeassistant
spec:
  defaultBackend:
    service:
      name: homeassistant
      port:
        number: 8080
  ingressClassName: tailscale
  tls:
    - hosts:
        - homeassistant
