kustomize/netbox-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netbox
  namespace: netbox
spec:
  defaultBackend:
    service:
      name: netbox
      port:
        number: 80
  ingressClassName: tailscale
  tls:
    - hosts:
        - netbox
